# Projekte_Uni

Projekte/Projekt 1/: CMakeLists.txt  Projekt_1.cpp
Projekte/Projekt 2/: 2.cpp  CMakeLists.txt
Projekte/Projekt 3/: 3.cpp  CMakeLists.txt
Projekte/Projekt Test/: 3.cpp  CMakeLists.txt
Team/: CMakeLists.txt  Projekt_3.cpp  std_lib_inc.h
Test/: CMakeLists.txt  Test.cpp
Uebungen/Aufgabe_2/Aufgabe 2.2/: Aufgabe 2.2.cpp  CMakeLists.txt
Uebungen/Aufgabe_2/Aufgabe 2.3/: Aufgabe 2.3.cpp  CMakeLists.txt
Uebungen/Aufgabe_2/Aufgabe 2.4/: Aufgabe 2.4.cpp  CMakeLists.txt
Uebungen/Aufgabe_2/Aufgabe 2.5/: Aufgabe 2.5.cpp  CMakeLists.txt
Uebungen/Aufgabe_2/Aufgabe 2.6.1 Map Loesung/: Aufgabe 2.6.cpp  CMakeLists.txt
Uebungen/Aufgabe_2/Aufgabe 2.6.1 Map Lösung/: CMakeLists.txt
Uebungen/Aufgabe_2/Aufgabe 2.6.2 Vorlesung/: Aufgabe 2.6.cpp  CMakeLists.txt
Uebungen/Aufgabe_2/Aufgabe 2.7/: Aufgabe 2.7.cpp  CMakeLists.txt
Uebungen/Aufgabe_3/Aufgabe 3.2/: Aufgabe 3.2.cpp  CMakeLists.txt
Uebungen/Aufgabe_3/Aufgabe 3.3/: 3.3.cpp  CMakeLists.txt
Uebungen/Aufgabe_3/Aufgabe 3.4/: 3.4.cpp  CMakeLists.txt
Uebungen/Aufgabe_3/Aufgabe 3.5/: 3.5.cpp  CMakeLists.txt
Uebungen/Aufgabe_3/Aufgabe 3.6/: 3.6.cpp  CMakeLists.txt
Uebungen/Aufgabe_4/Aufgabe 4.1/: 4.1.cpp  CMakeLists.txt
Uebungen/Aufgabe_4/Aufgabe 4.2 if/: 4.2.cpp  CMakeLists.txt
Uebungen/Aufgabe_4/Aufgabe 4.2 switch/: 4.2.cpp  CMakeLists.txt
Uebungen/Aufgabe_4/Aufgabe 4.3/: 4.3.cpp  CMakeLists.txt
Uebungen/Aufgabe_4/Aufgabe 4.4/: 4.4.cpp  CMakeLists.txt
Uebungen/Aufgabe_4/Aufgabe 4.5/: 4.5.cpp  CMakeLists.txt
Uebungen/Aufgabe_4/Aufgabe 4.6/: 4.6.cpp  CMakeLists.txt
Uebungen/Aufgabe_5/Aufgabe 5.1/: 5.1.cpp  CMakeLists.txt
Uebungen/Aufgabe_5/Aufgabe 5.2/: 5.2.cpp  CMakeLists.txt
Uebungen/Aufgabe_5/Aufgabe 5.3/: 5.3.cpp  CMakeLists.txt  std_lib_inc.h
Uebungen/Aufgabe_5/Aufgabe 5.4/: 5.4.cpp  CMakeLists.txt
Uebungen/Aufgabe_6/Aufgabe 6.1/: 6.1.cpp  CMakeLists.txt
Uebungen/Aufgabe_6/Aufgabe 6.2/: 6.2.cpp  CMakeLists.txt
Uebungen/Aufgabe_6/Aufgabe 6.3/: 6.3.cpp  CMakeLists.txt
Uebungen/Aufgabe_6/Aufgabe 6.4/: 6.4.cpp  CMakeLists.txt
Uebungen/Aufgabe_6/Aufgabe 6.5/: 6.5.cpp  CMakeLists.txt
